--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/cashier": "^13.12",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "stripe/stripe-php": "^8.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
